@@ -3,6 +3,7 @@ plugins {
   id("configure-java")
   id("groovy")
   id("org.springframework.boot")
+  id 'org.graalvm.buildtools.native'
 }
 
 description = "Standard configuration of standalone version of MQTT Broker"
@@ -16,10 +17,12 @@ dependencies {
   implementation libs.springboot.starter.core
   implementation libs.springboot.starter.log4j2
 
+  runtimeOnly projects.credentialsSourceFile
+  runtimeOnly projects.authenticationProviderBasic
+
   testImplementation projects.testSupport
   testImplementation testFixtures(projects.network)
-  testImplementation projects.credentialsSourceFile
-  testImplementation projects.authenticationProviderBasic
+  testImplementation libs.junit.platform.testkit
 }
 
 tasks.withType(GroovyCompile).configureEach {
@@ -28,10 +31,55 @@ tasks.withType(GroovyCompile).configureEach {
 }
 
 bootRun {
-  mainClass = "javasabr.mqtt.broker.application.MqttBrokerApplication"
   jvmArgs += "--enable-preview"
 }
 
 bootJar {
   mainClass = "javasabr.mqtt.broker.application.MqttBrokerApplication"
+}
+
+graalvmNative {
+  toolchainDetection = true
+  binaries {
+    main {
+      sharedLibrary = false
+      buildArgs.add("--enable-preview")
+      javaLauncher = javaToolchains.launcherFor {
+        languageVersion = JavaLanguageVersion.of(25)
+        vendor = JvmVendorSpec.matching("GraalVM Community")
+      }
+    }
+  }
+}
+
+jar {
+  from(sourceSets.aot.output)
+}
+
+processAot {
+  jvmArgs([
+      '-Dauthentication.credentials-source.file.enabled=true',
+      '-Dauthentication.provider.basic.enabled=true',
+      '-Dmqtt.external.tls.network.enabled=true',
+  ])
+}
+
+tasks.register('copyNativeImageTestResources', Copy) {
+  mustRunAfter 'nativeCompile'
+  from('src/test/resources/application-test.properties') {
+    rename 'application-test.properties', "application.properties"
+  }
+  from('src/test/resources/log4j2-test.xml') {
+    rename 'log4j2-test.xml', "log4j2.xml"
+  }
+  from('src/test/resources/auth/credentials-test') {
+    into 'auth'
+  }
+  from('src/test/resources/test-acl.gacl')
+  into layout.buildDirectory.dir("native/nativeCompile")
+}
+
+tasks.register('nativeImageTest', Test) {
+  dependsOn 'nativeCompile', 'copyNativeImageTestResources'
+  finalizedBy 'test'
 }
